fix scrollbar

--- a/styles/global/_common.scss
+++ b/styles/global/_common.scss
@@ -8,7 +8,6 @@
 
 html {
   width: 100%;
-  height: auto;
 }
 
 [data-media="pc"] {
