--- a/styles/pages/home.scss
+++ b/styles/pages/home.scss
@@ -11,7 +11,6 @@
 body {
   width: 100%;
   background-color: #f8cfcf;
-  height: stretch;
 }
 
 main {
